# BE-BookMyShow-OmJindal

./: .env.template  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
apps/base/: admin.py  constants.py  middleware.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/base/migrations/: 0001_initial.py  0002_alter_city_options_alter_genre_options_and_more.py
apps/base/tests/: test_models.py  test_views.py  utils.py
apps/booking/: admin.py  constants.py  models.py  permission.py  serializers.py  urls.py  views.py
apps/booking/migrations/: 0001_initial.py  0002_initial.py
apps/cinema/: admin.py  apps.py  constants.py  filter.py  models.py  pagination.py  serializers.py  urls.py  views.py
apps/cinema/migrations/: 0001_initial.py  0002_alter_cinema_address_alter_cinema_city_and_more.py  0002_remove_cinema_unique_cinema_at_each_address_and_more.py  0002_seat_remove_cinema_unique_cinema_at_each_address_and_more.py  0003_remove_cinema_unique_cinema_at_each_address.py  0003_seat_and_more.py
apps/cinema/tests/: test_models.py  test_views.py
apps/movie/: admin.py  apps.py  constants.py  filter.py  models.py  pagination.py  serializers.py  urls.py  views.py
apps/movie/migrations/: 0001_initial.py  0002_rename_generes_movie_genres.py  0003_alter_movie_duration.py  (+3 more)
apps/slot/: admin.py  apps.py  constant.py  constants.py  models.py  serializers.py  urls.py  views.py
apps/user/: admin.py  constants.py  forms.py  managers.py  models.py  permission.py  serializers.py  urls.py  utils.py  views.py
bookmyshow/: settings.py  urls.py  wsgi.py
(+19 files in other folders)
